Support Java 17 in initializr Take 2